# music_alert_bot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
locale/ru_RU/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: 2023_07_26_20:14-init.py  2023_07_29_18:02-rename_performer_to_artist.py  2023_07_31_17:44-add_collaboration.py
src/: __main__.py  client.py  db.py  keyboard_set.yaml
src/config/: env.py
src/handlers/: __init__.py  add_artist.py  add_performer.py  commands.py  delete_artist.py  hello.py  keyboards.py  list_artists.py  list_performers.py  release_notifications.py
src/queries/: add_album.sql  add_artist.sql  add_artist_to_collaboration.sql  add_artist_to_user.sql  add_listen_album.sql  add_performer.sql  add_performer_to_user.sql  add_user.sql  delete_artist_from_favorite.sql  delete_user_listened_album.sql  get_album.sql  get_all_artists.sql  get_all_users.sql  get_artist_albums.sql  get_artist_albums_ids.sql  get_artist_fans.sql  get_artist_ids.sql  get_not_listened_albums_for_user.sql  get_user_artists.sql  get_user_favorite_artists.sql  get_user_performers.sql
src/rules/: __init__.py  callback_data.py  callback_rules.py  state_rules.py
src/services/: states.py
src/services/db/: __init__.py  albums.py  artists.py  collaborations.py  models.py  performers.py  users.py
src/services/poling/: albums.py  midnight.py  notifications.py
src/services/yandex/: __init__.py  albums.py  albums_init.py  albums_poling.py  api.py  artists.py  performers.py
