[tool.poetry]
name = "music_alert_bot"
version = "0.1.0"
description = ""
authors = ["VodoGamer <vodogamer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telegrinder = "^0.1.dev20"
asyncpg = "^0.26.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ruff = "^0.0.260"
pyright = "^1.1.301"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.ruff]
select = ["I", "E", "F", "B", "Q"]
exclude = ["venv", "migrations"]
line-length = 99
target-version = "py310"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
