[tool.poetry]
name = "music_alert_bot"
version = "0.1.0"
description = ""
authors = ["VodoGamer <vodogamer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telegrinder = { git = "https://github.com/timoniq/telegrinder/" }
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
yandex-music = "^2.1.1"
babel = "^2.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pyright = "^1.1.320"

[tool.black]
line-length = 99
target-version = ['py311']

[tool.ruff]
select = ["I", "E", "F", "B", "Q"]
exclude = ["venv", "migrations"]
line-length = 99
target-version = "py311"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
